chore: project tree cleanup

--- a/src/html/weather.html
+++ b/src/html/weather.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Погода</title>
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/pages/weather.css">
-    <script type="module" src="./js/weather.js"></script>
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/pages/weather.css">
+    <script type="module" src="../js/weather.js"></script>
 </head>
 <body>
     <div class="container">
         <header class="header">
             <h1>🌤️ Прогноз погоды</h1>
             <p>Узнайте текущую погоду в любом городе мира</p>
-            <a href="index.html" class="back-link">← На главную</a>
+            <a href="../../index.html" class="back-link">← На главную</a>
         </header>
         
         <main class="main-content">
