fix: false info

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Добро пожаловать в мультистраничное приложение</h1>
+            <h1>Добро пожаловать</h1>
             <p>Выберите один из разделов ниже</p>
         </header>
         <main class="main-content">
@@ -19,7 +19,7 @@
                 <div class="card">
                     <div class="card-icon">🌤️</div>
                     <h2 class="card-title">Погода</h2>
-                    <p class="card-description">Текущая погода и прогноз</p>
+                    <p class="card-description">Текущая погода в любом городе мира</p>
                     <a href="src/html/weather.html" class="card-link">Перейти</a>
                 </div>
                 <div class="card">
