--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>Добро пожаловать</h1>
+            <h1>Добро пожаловать в мультистраничное приложение</h1>
             <p>Выберите один из разделов ниже</p>
         </header>
         <main class="main-content">
@@ -19,7 +19,7 @@
                 <div class="card">
                     <div class="card-icon">🌤️</div>
                     <h2 class="card-title">Погода</h2>
-                    <p class="card-description">Текущая погода в любом городе мира</p>
+                    <p class="card-description">Текущая погода и прогноз</p>
                     <a href="src/html/weather.html" class="card-link">Перейти</a>
                 </div>
                 <div class="card">
@@ -39,6 +39,12 @@
                     <h2 class="card-title">Загадка</h2>
                     <p class="card-description">Что-то интересное...</p>
                     <a href="src/html/mystery.html" class="card-link">Перейти</a>
+                </div>
+                <div class="card">
+                    <div class="card-icon">⛪</div>
+                    <h2 class="card-title">Церковный календарь</h2>
+                    <p class="card-description">Литургический календарь</p>
+                    <a href="src/html/church-calendar.html" class="card-link">Перейти</a>
                 </div>
             </div>
         </main>
