--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <a href="src/html/holiday.html" class="card-link">Перейти</a>
                 </div>
                 <div class="card">
-                    <div class="card-icon">❓</div>
-                    <h2 class="card-title">Загадка</h2>
-                    <p class="card-description">Что-то интересное...</p>
-                    <a href="src/html/mystery.html" class="card-link">Перейти</a>
+                    <div class="card-icon">🎭</div>
+                    <h2 class="card-title">Искусство</h2>
+                    <p class="card-description">Произведения со всех уголков Европы</p>
+                    <a href="src/html/europeana.html" class="card-link">Перейти</a>
                 </div>
             </div>
         </main>
