--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     <p class="card-description">Литургический календарь</p>
                     <a href="src/html/church-calendar.html" class="card-link">Перейти</a>
                 </div>
+                <div class="card">
+                    <div class="card-icon">🧠</div>
+                    <h2 class="card-title">Бесполезные факты</h2>
+                    <p class="card-description">Случайные факты на EN/DE</p>
+                    <a href="src/html/facts.html" class="card-link">Перейти</a>
+                </div>
             </div>
         </main>
         <footer class="footer">
