--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                     <div class="card-icon">🌤️</div>
                     <h2 class="card-title">Погода</h2>
                     <p class="card-description">Текущая погода в любом городе мира</p>
-                    <a href="src/html/weather.html" class="card-link">Перейти</a>
+                    <a href="./src/html/weather.html" class="card-link">Перейти</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">🎭</div>
                     <h2 class="card-title">Искусство</h2>
                     <p class="card-description">Произведения со всех уголков Европы</p>
-                    <a href="src/html/europeana.html" class="card-link">Перейти</a>
+                    <a href="./src/html/europeana.html" class="card-link">Перейти</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">⛪</div>
                     <h2 class="card-title">Церковный календарь</h2>
                     <p class="card-description">Литургический календарь</p>
-                    <a href="src/html/church-calendar.html" class="card-link">Перейти</a>
+                    <a href="./src/html/church-calendar.html" class="card-link">Перейти</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">🧠</div>
                     <h2 class="card-title">Бесполезные факты</h2>
                     <p class="card-description">Случайные факты на EN/DE</p>
-                    <a href="src/html/facts.html" class="card-link">Перейти</a>
+                    <a href="./src/html/facts.html" class="card-link">Перейти</a>
                 </div>
             </div>
         </main>
