fix: move script to the top

--- a/src/html/europeana.html
+++ b/src/html/europeana.html
@@ -6,6 +6,7 @@
     <title>Случайные картины из Europeana</title>
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/pages/europeana.css">
+    <script type="module" src="../js/europeana.js"></script>
 </head>
 <body>
        <header  class="header">
@@ -31,7 +32,5 @@
             <!-- Сюда будут добавляться картины -->
         </div>
     </div>
-
-    <script src="../js/europeana.js"></script>
 </body>
 </html>
