fix: DOM loader

--- a/src/html/europeana.html
+++ b/src/html/europeana.html
@@ -18,8 +18,8 @@
     <div class="container">
 
         <div class="button-container">
-            <button onclick="loadRandomPainting()" id="loadButton">🔄 Получить случайную картину</button>
-            <button onclick="clearGallery()" id="clearButton">❌ Очистить галерею</button>
+            <button id="loadButton">🔄 Получить случайную картину</button>
+            <button id="clearButton">❌ Очистить галерею</button>
         </div>
 
         <div id="loadingMessage" class="loading" style="display: none;">
@@ -32,5 +32,6 @@
             <!-- Сюда будут добавляться картины -->
         </div>
     </div>
+
 </body>
 </html>
