i hate http api

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <p class="card-description">Произведения со всех уголков Европы</p>
                     <a href="src/html/europeana.html" class="card-link">Перейти</a>
                 </div>
-                <div class="card">
-                    <div class="card-icon">⛪</div>
-                    <h2 class="card-title">Церковный календарь</h2>
-                    <p class="card-description">Литургический календарь</p>
-                    <a href="src/html/church-calendar.html" class="card-link">Перейти</a>
+               <div class="card">
+                    <div class="card-icon">📅</div>
+                    <h2 class="card-title">Выходной день?</h2>
+                    <p class="card-description">Проверка, выходной ли день в РФ</p>
+                    <a href="src/html/holiday.html" class="card-link">Перейти</a>
                 </div>
                 <div class="card">
                     <div class="card-icon">🧠</div>
